tests/rosetta/out/Java/boolean-values.error
javac error: exit status 1
/tmp/TestMochiToJavaboolean-values1164558944/001/BooleanValues.java:7: error: cannot find symbol
        Object l = lower(s);
                   ^
  symbol:   method lower(String)
  location: class BooleanValues
/tmp/TestMochiToJavaboolean-values1164558944/001/BooleanValues.java:21: error: bad operand types for binary operator '=='
        System.out.println("x == y:" + " " + x == y);
                                               ^
  first type:  String
  second type: int
/tmp/TestMochiToJavaboolean-values1164558944/001/BooleanValues.java:22: error: bad operand types for binary operator '<'
        System.out.println("x < y:" + " " + x < y);
                                              ^
  first type:  String
  second type: int
3 errors
